issue-89 fixed status tag alignment on mobile
removed rules from gov.uk Design System

--- a/src/components/status-tags-in-task-list-pages/_status-tags-in-task-list-pages.scss
+++ b/src/components/status-tags-in-task-list-pages/_status-tags-in-task-list-pages.scss
@@ -3,10 +3,18 @@
 // Custom styles
 
 .hmrc-status-tag {
-  float: right;
   color: $govuk-text-colour;
   font-family: "GDS Transport", Arial, sans-serif;
   -webkit-font-smoothing: antialiased;
+  display: inline-block;
+  margin-top: govuk-spacing(2);
+  margin-bottom: govuk-spacing(1);
+
+  @include govuk-media-query($from: 450px) {
+    float: right;
+    margin-top: 0;
+    margin-bottom: 0;
+  }
 }
 
 .app-task-list__items {
